fixed spacing on menu items

--- a/src/css/components/labbook/labbook.scss
+++ b/src/css/components/labbook/labbook.scss
@@ -325,9 +325,14 @@
         margin: 0 10px 0 30px;
     }
 
+    .Labbook__column-container--flex-1 > div{
+        margin: 0 30px 0 10px;
+    }
+
     .Labbook__column-container--flex-1{
       justify-content: flex-start;
-      margin: 0 10px;
+
+
 
       .Labbook__name-title{
         flex: 0 1;
